--- a/src/main/frontend/src/locales/pl/translation.json
+++ b/src/main/frontend/src/locales/pl/translation.json
@@ -8,8 +8,8 @@
   "notification.title.warning": "Ostrzeżenie",
   "notification.title.success": "Sukces",
 
-  "dialog.button.cancel": "anuluj",
-  "dialog.button.confirm": "potwierdź",
+  "dialog.button.cancel": "Anuluj",
+  "dialog.button.confirm": "Potwierdź",
   "dialog.permanent.title": "Trwała zmiana danych",
   "dialog.permanent.message": "Zmiana, którą próbujesz dokonać trwale modyfikuje dane. \n Jesteś tego pewny?",
   "dialog.update.token.title":"Wygaśnięcie tokenu",
@@ -17,10 +17,10 @@
   "dialog.update.token.refresh":"kliknij, aby go odświeżyć",
   "dialog.update.token.success": "Token został pomyślnie odnowiony",
 
-  "pageNotFound": "nie znaleziono strony",
-  "pageForbidden": "brak uprawnień",
-  "internalError": "wewnętrzny błąd serwera",
-  "main.page": "strona główna",
+  "pageNotFound": "Nie znaleziono strony",
+  "pageForbidden": "Brak uprawnień",
+  "internalError": "Wewnętrzny błąd serwera",
+  "main.page": "Strona główna",
 
   "error.request.404": "Zasób nie został znaleziony",
   "error.request.401.login": "Błąd autoryzacji",
@@ -123,7 +123,7 @@
   "sign.in": "Zaloguj się",
   "sign.up.title": "Utwórz konto",
   "sign.up.required.fields": "* Wymagane pola",
-  "sign.up.success": "Konto zostało utworzone, a wiadomość z linkiem aktywacyjnym wysłana na pocztę",
+  "sign.up.success": "Konto zostało utworzone, a wiadomość wraz z linkiem aktywacyjnym wysłana na pocztę",
 
   "login": "Login",
   "emailAddress": "Adres email",
@@ -131,5 +131,21 @@
   "repeatedPassword": "Powtórz hasło",
   "firstname": "Imię",
   "lastname": "Nazwisko",
-  "phoneNumber": "Numer telefonu"
+  "phoneNumber": "Numer telefonu",
+
+  "error.rest.validation": "Wprowadzone dane są nieprawidłowe",
+  "exception.database_exception.query_exception": "Błąd podczas wykonywania zapytania do bazy danych",
+  "exception.account_exception.login_invalid_exception": "Login jest niepoprawny lub zajęty",
+  "exception.account_exception.email_invalid_exception": "Adres email jest niepoprawny lub zajęty",
+  "exception.account_exception.phone_number_invalid_exception": "Numer telefonu jest niepoprawny lub zajęty",
+
+  "sign.up.confirmation": "Aktywuj konto",
+  "sign.up.confirmation.title": "Aktywacja konta",
+  "sign.up.confirmation.info": "Kliknij w poniższy przycisk, aby aktywować swoje konto",
+  "sign.up.confirmation.success.message": "Twoje konto zostało aktywowane",
+
+  "exception.account_exception.already_activated_exception": "Konto zostało już aktywowane",
+  "exception.confirmation_code_exception.code_used_exception": "Kod został już wykorzystany",
+  "exception.confirmation_code_exception.wrong_code_type_exception": "Kod jest nieprawidłowy",
+  "exception.confirmation_code_exception.code_expired_exception": "Kod wygasł"
 }
