Password reset implemented

--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -155,5 +155,10 @@
   "exception.app_runtime_exception.config_load_exception": "There was a problem with site configuration",
   "exception.app_runtime_exception.jwt_exception": "There was a problem with the JWT",
   "exception.app_runtime_exception.etag_exception": "There was a problem signing an entity",
-  "exception.not_found_exception.account_not_found_exception": "Account not found"
+  "exception.not_found_exception.account_not_found_exception": "Account not found",
+
+  "password.reset.email.sent": "Message with a link to reset the password was sent to the e-mail address provided",
+  "exception.account_exception.unconfirmed_account_exception": "Account has not yet been confirmed",
+  "exception.account_exception.blocked_account_exception": "Account is blocked"
+
 }
