--- a/src/main/frontend/src/locales/en/translation.json
+++ b/src/main/frontend/src/locales/en/translation.json
@@ -129,6 +129,7 @@
 
   "edit": "Edit",
   "delete": "Delete",
+  "refresh": "Refresh",
   "login": "Login",
   "emailAddress": "Email address",
   "password": "Password",
@@ -140,6 +141,7 @@
   "course.category": "Course category",
   "course.price": "Course price",
   "course.paid": "Paid",
+  "permissions": "Permissions",
 
   "error.rest.validation": "The entered data is incorrect",
   "exception.database_exception.query_exception": "There was an error executing database query",
@@ -177,5 +179,7 @@
   "vehicles.delete.success": "The vehicle has been successfully deleted",
   "vehicles.brand": "Brand:",
   "vehicles.model": "Model:",
-  "vehicles.production.year": "Production year:"
+  "vehicles.production.year": "Production year:",
+
+  "my.account.data": "Account information"
 }
